# cmake-init

./: CMakeLists.txt  CMakePresets.json  README.md  task.cmake
examples/bin-c/: .gitignore  CMakeLists.txt
examples/bin-cxx/: CMakeLists.txt
examples/lib-c/: CMakeLists.txt  CMakePresets.json
examples/lib-c/include/: lib-c.h
examples/lib-cxx/: CMakeLists.txt  task.cmake
examples/lib-cxx/include/: lib-cxx.h
src/: main.cpp
